--- a/authgateway/src/main/resources/application.yml
+++ b/authgateway/src/main/resources/application.yml
@@ -1,20 +1,4 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    leaseRenewalIntervalInSeconds: 10
-    metadataMap:
-      instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
-spring:
-  application.name: blueorgreenauthgateway
-  config:
-    import: "optional:configserver:http://localhost:8888"
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-  endpoint:
-    shutdown:
-      enabled: true
+spring.application.name: blueorgreenauthgateway
+spring.config.import: "optional:configserver:http://localhost:8888"
+
+wavefront.application.name: color-app
