--- a/blueorgreenfrontend/src/main/resources/application.yml
+++ b/blueorgreenfrontend/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-spring:
-  application.name: blueorgreenfrontend
-  config:
-    import: "optional:configserver:http://localhost:8888"
+spring.application.name: blueorgreenfrontend
+spring.config.import: "optional:configserver:http://localhost:8888"
 server.port: 9090
+
+wavefront.application.name: color-app
 
 #removeTypeCookie: false
