--- a/blueorgreenservice/src/main/resources/application.yml
+++ b/blueorgreenservice/src/main/resources/application.yml
@@ -1,5 +1,4 @@
-spring:
-  application.name: blueorgreen
-  config:
-    import: "optional:configserver:http://localhost:8888"
-server.port: 7070
+spring.application.name: blueorgreen
+spring.config.import: "optional:configserver:http://localhost:8888"
+
+wavefront.application.name: color-app
