--- a/config-files/application.yml
+++ b/config-files/application.yml
@@ -15,3 +15,4 @@ management:
       exposure.include: "*"
 #      base-path: /manage
   endpoint.shutdown.enabled: true
+  metrics.export.wavefront.enabled: false
