--- a/blueorgreenfrontend/src/main/resources/application.yml
+++ b/blueorgreenfrontend/src/main/resources/application.yml
@@ -1,7 +1,4 @@
-spring:
-  application.name: blueorgreenfrontend
-  config:
-    import: "optional:configserver:http://localhost:8888"
+spring.application.name: blueorgreenfrontend
 server.port: 9090
 
 #removeTypeCookie: false
