--- a/blueorgreengateway/src/main/resources/application.yml
+++ b/blueorgreengateway/src/main/resources/application.yml
@@ -1,16 +1,4 @@
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  instance:
-    leaseRenewalIntervalInSeconds: 10
-    metadataMap:
-      instanceId: ${spring.application.name}:${spring.application.instance_id:${server.port}}
-spring:
-  application.name: blueorgreengateway
-  config:
-    import: "optional:configserver:http://localhost:8888"
+spring.application.name: blueorgreengateway
 logging:
   level:
     org:
